2009-03-06  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerRegister.c:
	Fixed [ 2669147 ] Incorrect pointer assignment in providerRegister
	(found by Gnanasekar)

	* httpAdapter.c, dbpAdapter.c:
	Fixed [ 2669283 ] httpProcSem incorrectly initialized
	(found by Gnanasekar)
	
2009-03-05  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlOps.y:
	Fixed [ 2663804 ] sfcb can segfault while parsing large arrays

2009-03-05 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* brokerUpc.c:
	Fixed [ 2155441 ] need support for associators/references upcalls

2009-03-03 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am:
	Fixed [ 2615815 ] clean target is not able to clean code coverage reports.
	(based on patch from Surendra kodali)

2009-03-03 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* providerDrv.c:
	Fixed [ 2658399 ] Crash in providerDrv.c with NULL indicationMI
	(patch from J. Bart Whiteley)

2009-02-28  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	Fixed [ 2649381 ] Unused fucntion definition in cimcClientSfcbLocal

2009-02-26 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* mofpp.c:
	Fixed [ 2592304 ] Memory leak in mofpp.c file.
	(patch from Surendra kodali)

2009-02-26 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am, test/stageschema.sh, test/schema/*.mof:
	Optionally install test classes during postinstall step

2009-02-17 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am, configure.ac, test/Makefile.am:
	Fixed [ 2610487 ] Make test suite optional

2009-02-12  Sean Swehla <smswehla@linux.vnet.ibm.com>

	* msgqueue.c:
	Fixed [ 2590121 ] localConnectServer only retries once after interrupt

2009-02-11  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c:
	Fixed [ 2551127 ] httpAdapter may not terminate
	(patch by Viktor Mihajlovski)

2009-02-11 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am: